...
                      itemBuilder: (BuildContext context) => <PopupMenuEntry>[
                        PopupMenuItem(
                          child: Text('Cập nhật thông tin'),
                          value: "update_info",
                        ),
                        PopupMenuItem(
                          child: Text('Khai báo y tế'),
                          value: "create_medical_declaration",
                        ),
                        PopupMenuItem(
                          child: Text('Lịch sử khai báo y tế'),
                          value: "medical_declare_history",
                        ),
                        PopupMenuItem(
                          child: Text('Tạo phiếu xét nghiệm'),
                          value: "create_test",
                        ),
...
