...
          Navigator.of(context,
                  rootNavigator: !Responsive.isDesktopLayout(context))
              .push(MaterialPageRoute(
                  builder: (context) => const QuanrantineListMaps()));
        },
        icon: const Icon(Icons.map_outlined),
        tooltip: "Bản đồ",
      ),
      actions: [
        IconButton(
          onPressed: () {
            Navigator.of(context,
                    rootNavigator: !Responsive.isDesktopLayout(context))
                .push(MaterialPageRoute(
                    builder: (context) => const SearchQuarantine()));
          },
          icon: const Icon(Icons.search),
          tooltip: "Tìm kiếm",
        ),
      ],
    );

    return Scaffold(
      appBar: appBar,
...
