...
                            builder: (context) => BuildingListScreen(
                              currentQuarrantine: widget.currentQuarantine,
                            ),
                          ),
                        );
                      },
                      child: const Text('Xem tất cả'),
                      style: ButtonStyle(
                        foregroundColor:
                            MaterialStateProperty.all<Color>(primary),
                      ),
                    )
                  ],
...
