...
    }).onError((error, stackTrace) {
      if (error.toString().contains("Not found data")) {
        showDialog<String>(
          barrierDismissible: false,
          context: context,
          builder: (BuildContext context) => AlertDialog(
            title: const Text('Lỗi'),
            content: const Text("Không tìm thấy dữ liệu từ hình ảnh"),
            actions: <Widget>[
              TextButton(
                onPressed: () => Navigator.pop(context, 'OK'),
                child: const Text('OK'),
              ),
...
